--- a/package.json
+++ b/package.json
@@ -38,5 +38,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/calbertofilho/carlosalberto.eti.git"
+  },
+  "author": "Carlos Alberto Filho",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/calbertofilho/carlosalberto.eti/issues"
+  },
+  "homepage": "https://github.com/calbertofilho/carlosalberto.eti#readme"
 }
