--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "carlosalberto.eti",
   "version": "0.1.0",
+  "description": "",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -39,16 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/calbertofilho/carlosalberto.eti.git"
-  },
-  "author": "Carlos Alberto Filho",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/calbertofilho/carlosalberto.eti/issues"
-  },
-  "homepage": "https://github.com/calbertofilho/carlosalberto.eti#readme"
+  "author": "Carlos Alberto Filho"
 }
