--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
