--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.2",
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
